infra/k8s/20-argocd/ing-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ing
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns01"
spec:
  ingressClassName: nginx
  tls:
    - hosts: ["argocd.soboro.com"]
      secretName: argocd-tls
  rules:
    - host: "argocd.soboro.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port: { number: 80 }
